// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should contain progress-bar-inner-text css class when text inside is set true 1`] = `
<scale-progress-bar text-inside="true">
  <mock:shadow-root>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar-wrapper" part="wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-3" part="outer" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" part="inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <slot name="icon"></slot>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should contain progress-bar-text css class when show text is set true 1`] = `
<scale-progress-bar show-status="true">
  <mock:shadow-root>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar-wrapper" part="wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-2" part="outer" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" part="inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <div aria-hidden="true" class="progress-bar__status" part="status">
          0%
        </div>
        <slot name="icon"></slot>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should have css property width 24px when stroke width is set to 24 1`] = `
<scale-progress-bar stroke-width="24">
  <mock:shadow-root>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar-wrapper" part="wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-1" part="outer" role="progressbar" style="height: 24px;">
          <div class="progress-bar__inner" part="inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <slot name="icon"></slot>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should match snapshot 1`] = `
<scale-progress-bar>
  <mock:shadow-root>
    <style>
      @keyframes showProgress {
      from {
        width: 0;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar-wrapper" part="wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-0" part="outer" role="progressbar" style="height: 6px;">
          <div class="progress-bar__inner" part="inner" style="width: 0%; border: 1px solid transparent; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <slot name="icon"></slot>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;
